dnl configure.in for Chaos(CafeOBJ)
dnl $Id: configure.in,v 1.49 2010-08-09 01:43:54 sawada Exp $
dnl apply autoconf to this file for producing a configure script.

AC_INIT(./chaosx.system)
AC_PREREQ(2.4)dnl Required Autoconf version.
PACKAGE=cafeobj
VERSION=1.4
VMINOR=.13
VMEMO=PigNose0.99
PATCHLEVEL=p3
AC_SUBST(PACKAGE)
AC_SUBST(VERSION)
AC_SUBST(VMINOR)
AC_SUBST(VMEMO)
AC_SUBST(PATCHLEVEL)
AC_ARG_PROGRAM
AC_PROG_INSTALL
dnl AC_PATH_PROG(gcl_path,gcl, no)   ... no more gcl..
AC_PATH_PROG(cmu_path,lisp, no)
AC_PATH_PROG(sbcl_path,sbcl,no)
AC_PATH_PROG(acl_path,alisp, no)
AC_PATH_PROG(clisp_path,clisp, no)
dnl AC_PATH_PROG(acl8_path,alisp,no)
dnl AC_PATH_PROG(acl9_path,alisp,no)
dnl AC_PATH_PROG(openmcl_path,openmcl,no)
AC_PATH_PROG(clozurecl_32path,ccl,no)
AC_PATH_PROG(clozurecl_64path,ccl64,no)
AC_PROG_MAKE_SET
AC_ARG_WITH(lisp,
[  --with-lisp[=lisp]	specify the path of Lisp interpter to be used 
			for building CafeOBJ (defaulted to gcl).],
	lisp=$withval)
case "x$lisp" in
xcmu)
	lisp=$cmu_path ;
	bin_suffix=".x86f" ;
	exec_command="cafeobj.cmu.in";
	exec_bin="cafeobj.core"
	;;
xcmu-pc)
	lisp=$cmu_path ;
	bin_suffix=".x86f" ;
	exec_command="cafeobj.cmu.in";
	exec_bin="cafeobj.core"
	;;
xsbcl)
	lisp=$sbcl_path ;
	bin_suffix=".fasl";
	exec_command="cafeobj.sbcl.in";
	exec_bin="cafeobj.sbcl"
	;;
xacl)
	lisp=$acl_path ;
	bin_suffix=".fasl";
	exec_command="cafeobj.acl.in";
	exec_bin="cafeobj.acl"
	;;
xclisp)
	lisp=$clisp_path ;
	bin_suffix=".fas";
	exec_command="cafeobj.clisp.in";
	exec_bin="cafeobj.mem"
	;;
xccl)
	lisp=$clozurecl_32path ;
	bin_suffix=".dfsl";
	exec_command="cafeobj.openmcl.in";
	exec_bin="cafeobj.img"
	;;
xccl64)
	lisp=$clozurecl_64path ;
	bin_suffix=".dx64fsl";
	exec_command="cafeobj.openmcl.in";
	exec_bin="cafeobj.img"
	;;
xgcl|x)
	lisp=$gcl_path ;
	bin_suffix=".o";
	exec_command="cafeobj.gcl.in"
	exec_bin="cafeobj.exe"
	;;
*)
	echo "unknown lisp platform";
	exit 1
	;;
esac
AC_SUBST(lisp)
AC_SUBST(bin_suffix)
AC_SUBST(exec_command) 
AC_SUBST(exec_bin)
AC_OUTPUT(Makefile)
